--- a/sfdc-cli/package.yaml
+++ b/sfdc-cli/package.yaml
@@ -21,15 +21,9 @@ description:         Please see the README on GitHub at <https://github.com/gith
 
 dependencies:
 - base >= 4.7 && < 5
-- http-conduit
 - bytestring
-- HaXml
-- network-uri
-- tagsoup
-- fast-tagsoup
-- regex-posix
-- uri-encode
 - aeson
+- hsforce
 
 library:
   source-dirs: src
