--- a/sfdc-cli/sfdc-cli.cabal
+++ b/sfdc-cli/sfdc-cli.cabal
@@ -4,7 +4,7 @@ cabal-version: 1.12
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: ea1e54f8a0d2c8c2511da64a2907e7ab090403ed89f52d9c70f5eb06a8bfb814
+-- hash: 7f4f17d8afa03af3cc9825d859cf588cd25cdb8be6fe6392607e53045f3c1e4f
 
 name:           sfdc-cli
 version:        0.1.0.0
@@ -26,25 +26,15 @@ source-repository head
   location: https://github.com/githubuser/sfdc-cli
 
 library
-  exposed-modules:
-      Network.Salesforce.Auth
-      Network.Salesforce.Core
-      Network.Salesforce.Query
   other-modules:
       Paths_sfdc_cli
   hs-source-dirs:
       src
   build-depends:
-      HaXml
-    , aeson
+      aeson
     , base >=4.7 && <5
     , bytestring
-    , fast-tagsoup
-    , http-conduit
-    , network-uri
-    , regex-posix
-    , tagsoup
-    , uri-encode
+    , hsforce
   default-language: Haskell2010
 
 executable sfdc-cli-exe
@@ -55,17 +45,11 @@ executable sfdc-cli-exe
       app
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      HaXml
-    , aeson
+      aeson
     , base >=4.7 && <5
     , bytestring
-    , fast-tagsoup
-    , http-conduit
-    , network-uri
-    , regex-posix
+    , hsforce
     , sfdc-cli
-    , tagsoup
-    , uri-encode
   default-language: Haskell2010
 
 test-suite sfdc-cli-test
@@ -77,15 +61,9 @@ test-suite sfdc-cli-test
       test
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
-      HaXml
-    , aeson
+      aeson
     , base >=4.7 && <5
     , bytestring
-    , fast-tagsoup
-    , http-conduit
-    , network-uri
-    , regex-posix
+    , hsforce
     , sfdc-cli
-    , tagsoup
-    , uri-encode
   default-language: Haskell2010
