--- a/sfdc-cli/stack.yaml
+++ b/sfdc-cli/stack.yaml
@@ -22,8 +22,8 @@ resolver: lts-13.8
 # User packages to be built.
 # Various formats can be used as shown in the example below.
 #
-# packages:
-# - some-directory
+packages:
+ - .
 # - https://example.com/foo/bar/baz-0.0.2.tar.gz
 # - location:
 #    git: https://github.com/commercialhaskell/stack.git
@@ -32,14 +32,14 @@ resolver: lts-13.8
 #  subdirs:
 #  - auto-update
 #  - wai
-packages:
-- .
 # Dependency packages to be pulled from upstream that are not in the resolver
 # using the same syntax as the packages field.
 # (e.g., acme-missiles-0.3)
 extra-deps:
-- HaXml-1.25.5
-- fast-tagsoup-1.0.14
+ - http://hackage.haskell.org/package/hsforce-0.1.0.0/candidate/hsforce-0.1.0.0.tar.gz
+ - HaXml-1.25.5@sha256:8f18057ffbf20e71af67a1338bde2f0c4f8e1e326230ada57cf7e967953a46c7
+ - fast-tagsoup-1.0.14@sha256:5aacc569a6ab9633077bb181f6bd6a4dde3ebc7a8b844d2fe7b1920a0cf0ba9f
+
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
