--- a/markdown-parser/package.yaml
+++ b/markdown-parser/package.yaml
@@ -42,8 +42,18 @@ tests:
     main:                Spec.hs
     source-dirs:         test
     ghc-options:
+      - -threaded
+      - -rtsopts
+      - -with-rtsopts=-N
+    dependencies:
+      - markdown-parser
+      - hspec
+  markdown-parser-doctest:
+    main:                test/doctests.hs
+    ghc-options:
     - -threaded
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
     - markdown-parser
+    - doctest
